src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_80x24_quit-confirmation.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---

 Terracotta | main

 ┌Plan────────────────────────────────────────────────────────────────────────┐
 │Plan: 2 to add, 2 to change, 1 to destroy.                                  │
 │────────────────────────────────────────────────────────────────────────────│
 │  # terraform_data.api will be updated in-place                            ▲│
 │  ~ resource "terraform_data" "api" {                                      ┃│
 │      id       = "api-20260920"                                            ┃│
 │      ~ input  = "before" -> "after"                                       ┃│
 │      # (4 unchanged attributes hidden)                                    ┃│
 │    }                                                                      ││
 │                                                                           ││
 │  # terraform_data.worker must be replaced                                 ││
 │-/+ resource "terraform_data" "worker" {                                   ││
 │      ~ input = "worker-before" -> "worker-after" # forces replacement     ││
 │      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789ab││
 │      + new_checksum = (known after apply)                                 ││
 │    }                                                                      ││
 │                                                                           ││
 │◀︎════════════════════════════════════════════════════════════──────────────▶︎│
 └────────────────────────────────────────────────────────────────────────────┘
 Quit Terracotta?   [Enter] Quit   [Esc] Cancel
